app/indexer/mainnet/patch-indexer-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: indexer
  namespace: kaspa
spec:
  serviceName: prod-indexer
  selector:
    matchLabels:
      app: prod-indexer
  template:
    metadata:
      labels:
        app: prod-indexer
    spec:
      containers:
        - name: indexer
          volumeMounts:
            - name: data
              mountPath: /var/lib/app
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data2-prod-indexer-0
---
apiVersion: v1
kind: Service
metadata:
  name: indexer
  labels:
    app: prod-indexer
  namespace: kaspa
spec:
  selector:
    app: prod-indexer
